[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
authors = ["Alessandro Gasbarroni <alex.gasbarroni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["part-1"]
part-1 = []

[dependencies]
nom = "6.0.1"